--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
-    "@types/cypress": "latest",
+    "@types/cypress": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "cypress": "^12.13.0",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
