--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/cypress": "latest",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
