--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@fakerjs/age": "^2.1.1",
     "cypress-image-snapshot": "^4.0.1",
     "eslint-plugin-cypress": "^2.12.1",
     "faker": "^5.5.3",
