--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "faker": "^5.5.3",
     "pg": "^8.9.0",
     "sequelize": "^6.21.2",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@types/cypress": "latest",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
