--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "cypress-image-snapshot": "^4.0.1",
     "eslint-plugin-cypress": "^2.12.1",
-    "faker": "^5.5.3",
     "pg": "^8.9.0",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/cypress": "latest",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
