--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "cypress-image-snapshot": "^4.0.1",
     "eslint-plugin-cypress": "^2.12.1",
     "faker": "^5.5.3",
@@ -15,7 +16,7 @@
     "@types/cypress": "latest",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "cypress": "^12.13.0",
+    "cypress": "^12.17.4",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
