--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "prettier": "3.2.5",
     "typescript": "^4.9.5"
   },
   "husky": {
