--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "cypress-image-snapshot": "^4.0.1",
     "eslint-plugin-cypress": "^2.12.1",
-    "@faker-js/faker": "^8.4.1",
+    "install": "^0.13.0",
     "pg": "^8.9.0",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1"
